Fix test issues and complete JUnit test suite
- Fixed UnsupportedOperationException in User entity getAuthorities method by using Collectors.toList() instead of immutable .toList()
- Fixed immutable collection issue in UserRepositoryTest by using mutable HashSet instead of Set.of()
- Added proper imports for HashSet in test files
- All tests now pass successfully (16 tests total)
- Test suite includes: UserRepositoryTest, JwtTokenProviderTest, UserProfileServiceTest, and SmartcareServicesApplicationTests
- Comprehensive test coverage for repository, security, service, and application layers